<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Photo Maker</string>
    <string name="action_settings">Settings</string>
    <string name="content_image"></string>
    <string name="tab_home">Home</string>
    <string name="tab_setting">Setting</string>
    <string name="tab_favorites">Favorites</string>
    <string name="tab_infor">Infor</string>

    <!-- Setting -->
    <string name="st_twitter_title">Twitter</string>
    <string name="st_facebook_title">Facebook</string>
    <string name="st_account">Account</string>
    <string name="please_wait">Please wait.</string>

    <!-- Home -->
    <string name="home_bt_start">Start</string>
    <string name="image_content" />
    <string name="removeItem">Remove</string>

    <!-- Menu -->
    <string name="create_photo">New Picture</string>
    <string name="save_photo">Save Picture</string>
    <string name="other">Other</string>
    <string name="share_to_facebook">Share to Facebook</string>
    <string name="share_to_twitter">Share to Twitter</string>
    <string name="import_item">Import Item</string>

    <!-- Photo -->
    <string name="import_photo">Add picture</string>
    <string name="import_text">Add text</string>
    <string name="change_background">Change background</string>
    <string name="bt_cancel">Cancel</string>
    <string name="select_picture">Select picture</string>
    <string name="select_from">Add picture from</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>

</resources>