<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/import_item"
        android:icon="@drawable/av_add_to_queue"
        android:orderInCategory="1"
        android:showAsAction="always"
        android:title="@string/import_item"/>
    <item
        android:id="@+id/save_photo"
        android:icon="@drawable/content_save"
        android:orderInCategory="1"
        android:showAsAction="always"
        android:title="@string/save_photo"/>
    <item
        android:id="@+id/share_to_facebook"
        android:icon="@drawable/facebook_logo"
        android:orderInCategory="2"
        android:showAsAction="never"
        android:title="@string/share_to_facebook"/>
    <item
        android:id="@+id/share_to_twitter"
        android:icon="@drawable/twitter_logo"
        android:orderInCategory="2"
        android:showAsAction="never"
        android:title="@string/share_to_twitter"/>
    <item
        android:id="@+id/other"
        android:icon="@drawable/social_share"
        android:orderInCategory="2"
        android:showAsAction="never"
        android:title="@string/other"/>

</menu>