<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root"
    android:background="@drawable/bg"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:background="@android:color/transparent"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25.0dp"
            android:layout_marginLeft="25.0dp"
            android:layout_marginTop="37.5dp"
            android:text="@string/tab_setting"
            android:textColor="@color/style1"
            android:textSize="45.0dp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25.0dp"
            android:layout_marginRight="25.0dp"
            android:background="@drawable/rounded_edittext"
            android:orientation="vertical" >

            <RelativeLayout
                android:id="@+id/twitter_layout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_top"
                android:minHeight="100.0dp"
                android:orientation="horizontal"
                android:padding="25.0dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="12.5dp"
                    android:text="@string/st_twitter_title"
                    android:textColor="@color/black_text_default"
                    android:textSize="35.0dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/twitter_mail_acc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="12.5dp"
                    android:layout_toLeftOf="@+id/iv1"
                    android:text="@string/st_account"
                    android:textColor="@color/black_text_default"
                    android:textSize="35.0dp" />

                <ImageView
                    android:id="@+id/iv1"
                    android:layout_width="25.0dp"
                    android:layout_height="37.5dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:contentDescription="@string/content_image"
                    android:src="@drawable/arrow" />
            </RelativeLayout>

            <View
                android:id="@+id/lines3"
                android:layout_width="fill_parent"
                android:layout_height="2.5dp"
                android:background="@color/lines" />

            <RelativeLayout
                android:id="@+id/facebook_layout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_bottom"
                android:minHeight="100.0dp"
                android:orientation="horizontal"
                android:padding="25.0dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12.5dp"
                    android:text="@string/st_facebook_title"
                    android:textColor="@color/black_text_default"
                    android:textSize="35.0dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/facebook_mail_acc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="12.5dp"
                    android:layout_toLeftOf="@+id/iv2"
                    android:text="@string/st_account"
                    android:textColor="@color/black_text_default"
                    android:textSize="35.0dp" />

                <ImageView
                    android:id="@+id/iv2"
                    android:layout_width="25.0dp"
                    android:layout_height="37.5dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:contentDescription="@string/content_image"
                    android:src="@drawable/arrow" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

    <include
        android:id="@+id/include2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        layout="@layout/tabbar_layout_800" >
    </include>

</LinearLayout>